Implementação dos métodos findManufacturers e findSpecialties.
