# src/main/resources/openapi.yaml
@@ -93,6 +93,21 @@ paths:
               schema:
                 $ref: '#/components/schemas/SpecialtyResponse'
 
+    get:
+      summary: Lista de especialidades cadastradas
+      operationId: findSpecialties
+      tags:
+        - Specialty
+      responses:
+        '200':
+          description: Lista de especialidades
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SpecialtyResponse'
+
   /workshop/manufacturer:
     post:
       summary: Cadastra uma nova fabricante
@@ -112,6 +127,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ManufacturerResponse'
+
+    get:
+      summary: Lista de fabricantes cadastradas
+      operationId: findManufacturers
+      tags:
+        - Manufacturer
+      responses:
+        '200':
+          description: Lista de fabricantes
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ManufacturerResponse'
 
 components:
   schemas:
